# Lora-rp2040

./: CMakeLists.txt  LICENSE  README.md  main.cpp  main.h  reciver.cpp
bme68x/: bme68x_hal.cpp  bme68x_hal.h
sx126x/: Lora.cpp  Lora.h  sx126x.c  sx126x.h  sx126x_hal.c  sx126x_hal.h  sx126x_regs.h
